<resources>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_app_description"> Linux virtual machines, made simple. &lt;br /&gt; &lt;br /&gt; Made with ❤️ by &lt;a href=https://kdrag0n.dev/?utm_medium=app&amp;amp;utm_source=app-virtcontainer&gt;kdrag0n&lt;/a&gt; </string>
    <string name="about_app_version">Version %1$s (%2$d)</string>
    <string name="about_button_contact">Contact</string>
    <string name="about_button_legal">Legal</string>
    <string name="about_button_licenses">Licenses</string>
    <string name="about_button_support">Support</string>
    <string name="about_button_website">Website</string>
    <string name="about_licenses">Third-party licenses</string>
    <string name="about_url_legal">https://kdrag0n.dev/terms-of-service</string>
    <string name="adb_setup_notification_channel_pairing">Pairing</string>
    <string name="adb_setup_notification_channel_pairing_desc">Wireless debugging pairing for setting up Repainter</string>
    <string name="adb_setup_notification_channel_upgrade">Updates</string>
    <string name="adb_setup_notification_channel_upgrade_desc">Setup-related information when app is updated</string>
    <string name="adb_setup_notification_group">Setup</string>
    <string name="adb_setup_notification_pairing_code">Ready to pair</string>
    <string name="adb_setup_notification_pairing_code_button">Enter code</string>
    <string name="adb_setup_notification_pairing_code_desc">Read the pairing code and enter it here</string>
    <string name="adb_setup_notification_pairing_code_error">Try pairing again</string>
    <string name="adb_setup_notification_pairing_code_error_desc_pairing">Couldn’t pair</string>
    <string name="adb_setup_notification_pairing_code_error_desc_setup">Couldn’t set up Repainter</string>
    <string name="adb_setup_notification_pairing_code_error_desc_wrong">Wrong code</string>
    <string name="adb_setup_notification_pairing_code_field">Pairing code</string>
    <string name="adb_setup_notification_pairing_code_success">Setup done</string>
    <string name="adb_setup_notification_waiting_pairing">Start pairing</string>
    <string name="adb_setup_notification_waiting_pairing_desc">Tap “Pair device with pairing code”</string>
    <string name="adb_setup_notification_waiting_prepare_miui">Turn on “USB debugging (Security settings)”</string>
    <string name="adb_setup_notification_waiting_prepare_oneplus">Turn on “Disable permission monitoring”</string>
    <string name="adb_setup_notification_waiting_server">Turn on wireless debugging</string>
    <string name="adb_setup_notification_waiting_server_desc">Tap to open developer options</string>
    <string name="add">Add</string>
    <string name="allow">Allow</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Nestbox</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="back">Back</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close_drawer">Close navigation menu</string>
    <string name="close_sheet">Close sheet</string>
    <string name="collapsed">Collapsed</string>
    <string name="container_details_title">OS info</string>
    <string name="copy_text">Copy</string>
    <string name="create_title">Add OS</string>
    <string name="debug_report_dialog_progress">Creating debug report</string>
    <string name="default_error_message">Invalid input</string>
    <string name="default_popup_window_title">Pop-Up Window</string>
    <string name="default_value">Default</string>
    <string name="dialog">Dialog</string>
    <string name="drm_domain_patreon">licensing-patreon.kdrag0n.dev</string>
    <string name="drm_license_invalid_buy">Buy</string>
    <string name="drm_license_invalid_desc"> Follow these steps, then tap “Try again”: &lt;br/&gt;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;• Check your internet connection &lt;br/&gt;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;• Make sure &lt;a href=https://%1$s/&gt;%1$s&lt;/a&gt; loads &lt;br/&gt;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;• Update this app to the latest version &lt;br/&gt;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;• Download and install this app again &lt;br/&gt;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;• Remove any modifications that may be affecting this app &lt;br/&gt; &lt;br/&gt; If this is intentional, please consider that as an indie developer and student, seeing people pirate apps that I put so much work into is demoralizing and hurts me. If you can’t afford this app, just let me know, and we may be able to figure something out. &lt;br/&gt; &lt;br/&gt;Thanks for understanding ❤️ ️</string>
    <string name="drm_license_invalid_desc_oldversion">Please update Repainter to keep using it.</string>
    <string name="drm_license_invalid_retry">@string/try_again</string>
    <string name="drm_license_invalid_title">Can’t verify purchase</string>
    <string name="drm_license_invalid_title_oldversion">App too old</string>
    <string name="drm_license_invalid_update">Update</string>
    <string name="dropdown_menu">Dropdown menu</string>
    <string name="enable">Enable</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="expanded">Expanded</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="iap_response_error_billing_unavailable">Purchases are not available</string>
    <string name="iap_response_error_developer_error">Developer error, please report</string>
    <string name="iap_response_error_item_already_owned">You’ve already bought this</string>
    <string name="iap_response_error_item_unavailable">Item not available in your country</string>
    <string name="iap_response_error_not_supported">Purchases not supported on your device</string>
    <string name="iap_response_error_service_unavailable">Can’t connect to Play Store. Check your connection.</string>
    <string name="iap_response_error_timeout">Play Store not responding</string>
    <string name="iap_response_error_unknown">Play Store error: %1$s</string>
    <string name="in_progress">In progress</string>
    <string name="indeterminate">Partially checked</string>
    <string name="item_view_role_description">Tab</string>
    <string name="m3_sys_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="m3_sys_motion_easing_emphasized_path_data">M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1</string>
    <string name="m3_sys_motion_easing_legacy_accelerate">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="m3_sys_motion_easing_legacy_decelerate">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="m3_sys_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="m3_sys_motion_easing_standard">cubic-bezier(0.2, 0.0, 0.0, 1.0)</string>
    <string name="main_dialog_beta_optout">Use stable version?</string>
    <string name="main_dialog_beta_optout_button_confirm">Leave beta</string>
    <string name="main_dialog_beta_optout_button_dismiss">Cancel</string>
    <string name="main_dialog_beta_optout_desc">A stable, non-beta version of %1$s is now available.\n\nTo use the stable version, leave the beta program through the Play Store.</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_motion_easing_accelerated">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_decelerated">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="material_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="material_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_standard">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="material_slider_range_start">Range start,</string>
    <string name="material_timepicker_am">AM</string>
    <string name="material_timepicker_pm">PM</string>
    <string name="mtrl_checkbox_button_icon_path_checked">M14,18.2 11.4,15.6 10,17 14,21 22,13 20.6,11.6z</string>
    <string name="mtrl_checkbox_button_icon_path_group_name">icon</string>
    <string name="mtrl_checkbox_button_icon_path_indeterminate">M13.4,15 11,15 11,17 13.4,17 21,17 21,15z</string>
    <string name="mtrl_checkbox_button_icon_path_name">icon path</string>
    <string name="mtrl_checkbox_button_path_checked">M23,7H9C7.9,7,7,7.9,7,9v14c0,1.1,0.9,2,2,2h14c1.1,0,2-0.9,2-2V9C25,7.9,24.1,7,23,7z</string>
    <string name="mtrl_checkbox_button_path_group_name">button</string>
    <string name="mtrl_checkbox_button_path_name">button path</string>
    <string name="onboarding_adb_dev_options">Developer options</string>
    <string name="onboarding_adb_pair">Setup</string>
    <string name="onboarding_config">Basic settings</string>
    <string name="onboarding_device_support">Device not supported</string>
    <string name="onboarding_welcome">@string/app_name</string>
    <string name="settings">Settings</string>
    <string name="settings_debug">Debug</string>
    <string name="settings_port_forward">Port forwarding</string>
    <string name="settings_port_forward_create">Add port forward</string>
    <string name="settings_title">@string/app_name</string>
    <string name="settings_usb">USB</string>
    <string name="terminal_title">Terminal</string>
</resources>