<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/preferences_view" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:padding="16dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp">
            <ImageView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="16dp" android:src="@mipmap/ic_launcher" android:contentDescription="@null"/>
            <TextView android:textAppearance="?attr/textAppearanceTitleMedium" android:textSize="20sp" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_name" android:letterSpacing="@dimen/font_inter_spacing_20" app:fontFamily="@font/inter_medium"/>
            <TextView android:textAppearance="?attr/textAppearanceBodyMedium" android:textColor="?android:attr/textColorSecondary" android:layout_gravity="center_horizontal" android:id="@+id/version_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4dp"/>
            <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp">
                <Button android:id="@+id/website_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="4dp" android:text="@string/about_button_website" app:icon="@drawable/ic_fluent_globe_24_regular" style="@style/Widget.Material3.Button.TonalButton"/>
            </LinearLayout>
            <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <Button android:id="@+id/contact_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="4dp" android:text="@string/about_button_contact" app:icon="@drawable/ic_fluent_mail_24_regular" style="@style/Widget.Material3.Button.TonalButton"/>
                <Button android:id="@+id/support_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="4dp" android:text="@string/about_button_support" app:icon="@drawable/ic_fluent_chat_24_regular" style="@style/Widget.Material3.Button.TonalButton"/>
            </LinearLayout>
            <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <Button android:id="@+id/legal_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="4dp" android:text="@string/about_button_legal" app:icon="@drawable/ic_fluent_book_24_regular" style="@style/Widget.Material3.Button.OutlinedButton"/>
                <Button android:id="@+id/licenses_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="4dp" android:text="@string/about_button_licenses" app:icon="@drawable/ic_fluent_document_24_regular" style="@style/Widget.Material3.Button.OutlinedButton"/>
            </LinearLayout>
        </LinearLayout>
        <com.google.android.material.card.MaterialCardView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" style="?attr/materialCardViewOutlinedStyle">
            <TextView android:orientation="vertical" android:id="@+id/app_description" android:padding="16dp" android:layout_width="match_parent" android:layout_height="wrap_content"/>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
